--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "bootstrap": "~3",
     "angular": "~1.2",
-    "angular-resource": "~1.2",
-    "angular-mocks": "~1.2",
-    "angular-cookies": "~1.2",
+    "angular-resource": "~1.3.x",
+    "angular-mocks": "~1.3.x",
+    "angular-cookies": "~1.3.x",
     "angular-animate": "~1.3.x",
-    "angular-touch": "~1.2",
-    "angular-sanitize": "~1.2",
+    "angular-touch": "~1.3.x",
+    "angular-sanitize": "~1.3.x",
     "angular-bootstrap": "~0.11.2",
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.11",
