--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js",
   "dependencies": {
     "bootstrap": "~3",
-    "angular": "~1.2",
+    "angular": "~1.3.x",
     "angular-resource": "~1.3.x",
     "angular-mocks": "~1.3.x",
     "angular-cookies": "~1.3.x",
