--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-material": "~0.9.0",
     "angularjs-color-picker": "~0.3.1",
     "tinycolor": "~1.1.2",
-    "angular-bootstrap-colorpicker": "~3.0.17"
+    "angular-bootstrap-colorpicker": "~3.0.17",
+    "qtip2": "~2.2.1"
   }
 }
